SCIP version 3.2.2
==================

fixed bugs:
- fixed bug in XML reader concerning comments
- fixed wrong representation of SOC constraints in NLP
- fixed possible segmentation fault in genvbounds propagator
- fixed bug with solutions from previous runs not satisfying an objective limit
- the AMPL interface now writes a solve status (solve_result_num) into the .sol file
- fix wrong propagation of product expressions
- fix memory leaks in TSP example
- return SCIP_ERROR when a memory exception is caught in SoPlex (was SCIP_LPERROR)
- in the cmpres.awk (allcmpres.sh) output, the counts in the time column are now with respect to the
  whole set of processed instances (as with fail and solv), while before it was with respect to the
  set of instances where no solver failed (eval set); thus, now proc = fail + time + solv.
- fixed memory leak in OSiL reader
- writing of solutions or parameters to a file now works also with the message handler set to quiet
- fixed bug in heur_octane with uninitialized ray direction
- fixed a few issues within redundant constraint detection of (specialized) linear constraint handlers

performance improvements:
- improve propagation of absolute-value expression in the case that the sign of the argument is fixed

interface:
- time limit of SCIP-infinity is converted to LPI-infinity when setting it
- removed SCIPvarGetLbAtIndex() and added SCIPgetVarLbAtIndex()
- removed SCIPvarGetUbAtIndex() and added SCIPgetVarUbAtIndex()
- removed SCIPVarGetBdAtIndex() and added SCIPgetVarBdAtIndex()
- removed SCIPvarWasFixedAtIndex() and added SCIPgetVarWasFixedAtIndex()

Makefile:
- revise sub-makefiles for MSVC on MinGW
- fix bug in 'dll' target
- make shared libraries aware of their dependencies
- link binary to shared libs when compiling with SHARED=true
- 'make install' copies now all header files

SCIP version 3.2.1
==================

features: