@@ -38,6 +38,7 @@ SCIP_RETCODE run(
    SCIP* scip;
    char buffer[SCIP_MAXSTRLEN];
    SCIP_Bool printstat;
+   char* logfile = NULL;
 
    assert(nlfile != NULL);
 
@@ -55,7 +56,12 @@ SCIP_RETCODE run(
 
    SCIP_CALL( SCIPaddBoolParam(scip, "display/statistics",
       "whether to print statistics on a solve",
-      NULL, FALSE, FALSE, NULL, NULL) );
+      &printstat, FALSE, FALSE, NULL, NULL) );
+
+   SCIP_CALL( SCIPaddStringParam(scip, "display/logfile",
+      "name of file to write SCIP log to (additionally to writing to stdout)",
+      &logfile, FALSE, "", NULL, NULL) );
+   assert(logfile != NULL);
 
    SCIPprintExternalCodes(scip, NULL);
    SCIPinfoMessage(scip, NULL, "\n");
@@ -66,7 +72,9 @@ SCIP_RETCODE run(
       SCIP_CALL( SCIPreadParams(scip, setfile) );
    }
 
-   SCIP_CALL( SCIPgetBoolParam(scip, "display/statistics", &printstat) );
+   /* set logfile, if not default empty string */
+   if( *logfile )
+      SCIPsetMessagehdlrLogfile(scip, logfile);
 
    /* setup commands to be executed by SCIP */
 
